# dvmn-django-01-yandex-afisha

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
places/: admin.py  models.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_image.py  0003_auto_20211011_1450.py  0004_alter_image_position.py  0005_auto_20211025_1347.py  0006_auto_20211025_1404.py  0007_alter_image_position.py  0008_auto_20211027_1207.py
templates/: index.html
yandex_afisha/: settings.py  urls.py  views.py
