[tool.poetry]
name = "dvmn-django-01-yandex-afisha"
version = "0.1.0"
description = ""
authors = ["Dmitriy Suchkov <Account.log@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
Pillow = "^8.3.2"
django-admin-sortable2 = "^1.0.2"
django-tinymce = "^3.3.0"
environs = "^9.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
